<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".farmInfo">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:text="Farm Info"
            android:textSize="32dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/businessName"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/business_name"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/background"
            android:drawablePadding="10dp"
            android:hint="@string/businessName"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/informalName"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/background"
            android:drawableLeft="@drawable/name"
            android:drawablePadding="10dp"
            android:hint="@string/informalName"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/streetAddress"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/background"
            android:drawableLeft="@drawable/baseline_home"
            android:drawablePadding="8dp"
            android:hint="@string/streetAddress"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray">

        </EditText>

        <EditText
            android:id="@+id/City"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/background"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="8dp"
            android:hint="@string/City"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray">

        </EditText>

        <EditText
            android:id="@+id/enterZipcode"
            android:layout_width="279dp"
            android:layout_height="58dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/background"
            android:drawablePadding="8dp"
            android:hint="@string/enterZipcode"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="91dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:textSize="60dp"
            android:drawableLeft="@drawable/back" />

        <Button
            android:id="@+id/Continue"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:text="Continue"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:cornerRadius="30dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>